--- a/style.css
+++ b/style.css
@@ -23,9 +23,9 @@ h3 {
   color: white;
   text-align: center;
   padding: 14px 16px;
-    text-decoration: none;
-    font-size: 1.2rem;
-    text-transform: uppercase;
+  text-decoration: none;
+  font-size: 1.2 rem;
+  text-transform: uppercase;
 }
 
 .topnav .search-container{
@@ -46,8 +46,8 @@ input {
   font: 15px system-ui;
   color: #fff;
   height: 100%;
-    width: 100%;
-    padding: 6px 9px;
+  width: 100%;
+  padding: 6px 9px;
 }
 
 .thumbnail {
@@ -67,4 +67,8 @@ input {
   padding: 15px;
   text-align: center;
   background-color: #151f30;
+}
+
+h3 {
+  font-size: 1rem;
 }
